...

                    with(
                        dataSetSections.firstOrNull { it.uid == currentSection }?.misconfiguredRows,
                    ) {
                        val message =
                            "Some fields couldn't be displayed due to a configuration issue: %s.\nPlease contact your administrator."
                        val info =
                            when {
                                this != null && size > 4 -> "${joinToString(", ")} and ${size - 4} more"
                                this != null -> joinToString(", ")
                                else -> null
                            }
                        if (!this.isNullOrEmpty()) {
...
